# $Id$

2008-08-26	Konstantin V. Arkhipov

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test. 

2008-08-07	Konstantin V. Arkhipov

	* 0.10.12 released.

2008-07-18	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: now does not serialize strings.

2008-07-15	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: new scalable voodoo-like
	dao worker.

	* core/Cache/: increment/decrement implemented in all CachePeer's.

2008-07-14	Konstantin V. Arkhipov

	* main/DAOs/Workers/CommonDaoWorker.class.php: trivial getListByIds()
	optimization - now fetches only unique objects.

2008-06-17	Konstantin V. Arkhipov

	* 0.10.11 released.

2008-06-03	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: multi-get response deserialized
	all at once now; fixed cache corruption bug in case of custom __wakeup
	implementation.

2008-05-27	Konstantin V. Arkhipov

	* main/DAOs/Handlers/CacheSegmentHandler.class.php: backported from
	trunk.

	* core/Cache/: getList() and append() were backported from trunk for
	all CachePeer's.

	* main/DAOs/Workers/CommonDaoWorker.class.php,
	main/DAOs/Workers/TransparentDaoWorker.class.php: getListByIds() now
	uses CachePeer's multi-get ability - getList(); backported from trunk.

2008-05-02	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-13	Konstantin V. Arkhipov

	* global.inc.php.tpl: class cache now detects classes with errors
	during compile time.

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-07	Konstantin V. Arkhipov

	* main/UnifiedContainer/UnifiedContainer.class.php: worker's
	serialization prevention implemented.

2008-04-03	Denis M. Gabaidulin
